# robot-luxo

./: .gitmodules  README.md  install.sh
catkin_ws/: install.sh
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/imu_bno055/: bno055_i2c_node
catkin_ws/devel/lib/light/: light_node
catkin_ws/devel/lib/luxo_hardware_interface/: luxo_hardware_interface_node
catkin_ws/devel/lib/pkgconfig/: imu_bno055.pc  light.pc  luxo_hardware_interface.pc  motion_controller.pc  pwm_pca9685.pc  remote.pc  rosboard.pc  system_stats.pc
catkin_ws/devel/lib/pwm_pca9685/: pca9685_node
catkin_ws/devel/lib/remote/: remote_node
catkin_ws/devel/lib/rosboard/: rosboard_node
catkin_ws/launch/: robot.launch
catkin_ws/src/: .find.swp
catkin_ws/src/animation/: CMakeLists.txt  animation_test.py  package.xml  walk1.py
catkin_ws/src/animation/nodes/: animation_node
catkin_ws/src/dev-tools/: joint-test  joint-test-2
catkin_ws/src/face_detect/: CMakeLists.txt  package.xml
catkin_ws/src/face_detect/nodes/: face_detect_node
catkin_ws/src/joint_trajectory_controller/: animation_test.py  walk0.py  walk2.py
catkin_ws/src/joint_trajectory_controller/nodes/: foo.launch  (+2 more)
catkin_ws/src/light/: CMakeLists.txt  package.xml
catkin_ws/src/luxo_hardware_interface/: CMakeLists.txt
catkin_ws/src/luxo_hardware_interface/config/: controllers.yaml  hardware.yaml  joint_limits.yaml  joint_limits2.yaml  luxo.urdf
catkin_ws/src/luxo_hardware_interface/include/luxo_hardware_interface/: luxo_hardware.h  luxo_hardware_interface.h
catkin_ws/src/luxo_hardware_interface/launch/: luxo_position_controllers.launch
catkin_ws/src/luxo_hardware_interface/src/: luxo_hardware_interface.cpp  luxo_hardware_interface_node.cpp
catkin_ws/src/motion_controller/: CMakeLists.txt  package.xml
catkin_ws/src/object_detect/: CMakeLists.txt  package.xml
catkin_ws/src/object_track/: CMakeLists.txt  package.xml
catkin_ws/src/remote/: CMakeLists.txt
catkin_ws/src/remote/nodes/: package-lock.json  package.json  remote_node
catkin_ws/src/ros-system-stats/: README.md
catkin_ws/src/ros-system-stats/system_stats/: CMakeLists.txt
code/launch/: default.launch
code/src/imu_bno055/: CMakeLists.txt  package.xml
code/src/imu_bno055/include/imu_bno055/: BNO055Activity.hpp
code/src/imu_bno055/src/: BNO055Activity.cpp  imu_bno055_node.cpp
code/src/servo_pca9685/: CMakeLists.txt  package.xml
code/src/status_system/: CMakeLists.txt  package.xml
design/: arm-bottom-0.scad  arm-bottom-0.stl  arm-bottom-1.scad  arm-bottom-1.stl  arm-top-0.scad  arm-top-0.stl  arm-top-0a.stl  arm-top-1.scad  arm-top-1.stl  base-cover.scad  base-cover.stl  base.scad  base.stl  bell-old.scad  bell.scad  bottom-0.scad  bottom-0.stl  bottom-1.scad  bottom-1.stl  bottom.scad  bulb-0.scad  bulb-0.stl  bulb-1.scad  bulb-1.stl  bulb-insert.scad  bulb-insert.stl  bulb-mount.scad  bulb-mount.stl  lock.scad  lock.stl  neck.scad  neck.stl  parts-list.md  parts-list.txt  rod-0.scad  rod-0.stl  rod-1.scad  rod-1.stl  rod-2.scad  rod-2.stl  (+12 more)
design/include/: base.scad  base.stl  servo.scad  tornillo.scad
ros_catkin_ws/src/: CMakeLists.txt
system/: apt-installs.txt  install-apt.sh  install-config.sh  install-nodejs.sh  install-pip.sh  install-ros-base.sh  install-ros-more.sh  install-ros.sh  install-ros2.sh  install.sh  pip-installs.txt
system/root/boot/: config.txt
system/root/etc/: rc.local  robot.launch  robot_minimal.launch
system/root/root/: .profile
system/system/: pip-installs.txt
system/vars/: apt-installs-ros.txt  apt-installs.txt  pip-installs.txt
(+27 files in other folders)
